Fix alignment of new location button on iPhone

--- a/src/main/resources/static/css/badgerstyle.css
+++ b/src/main/resources/static/css/badgerstyle.css
@@ -74,8 +74,12 @@ body {
     height: 56px;
 }
 .badger-nav-toggler {
-    height: 40px;
     align-self: center;
+    padding-left: 2px;
+    padding-right: 2px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin-top: 3px;
 }
 .badger-nav-dropdown {
 	display: inline-block;
@@ -91,7 +95,7 @@ body {
 }
 .badger-nav-sticky {
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
     vertical-align: middle;
     width: 100%;
 }
